results/SVCOMP/specgen/log-ExSymExeD2I-2024_03_06_16_25_47.txt
class Main {

  //@ requires 0.0 <= x && x <= Integer.MAX_VALUE / 2;
  //@ ensures \result <==> test(x);
  public static boolean f(double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> res > 0;
  //@ ensures !\result ==> res <= 0;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: non-static method test(double) cannot be referenced from a static context
  //@ ensures \result <==> test(x);
                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:14: error: cannot find symbol
  //@ ensures \result ==> res > 0;
                          ^
  symbol:   variable res
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:15: error: cannot find symbol
  //@ ensures !\result ==> res <= 0;
                           ^
  symbol:   variable res
  location: class Main
3 errors

class Main {

  //@ requires 0.0 <= x && x <= Integer.MAX_VALUE / 2;
  //@ ensures \result <==> test(x);
  public static boolean f(double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> (int) (x + 1) > 0;
  //@ ensures !\result ==> (int) (x + 1) <= 0;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: non-static method test(double) cannot be referenced from a static context
  //@ ensures \result <==> test(x);
                           ^
1 error

class Main {

  //@ requires 0.0 <= x && x <= Integer.MAX_VALUE / 2;
  //@ ensures \result <==> new Main().test(x);
  public static boolean f(double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> (int) (x + 1) > 0;
  //@ ensures !\result ==> (int) (x + 1) <= 0;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: Object allocation is not permitted in specification expressions
  //@ ensures \result <==> new Main().test(x);
                           ^
1 error

class Main {

  //@ requires 0.0 <= x && x <= Integer.MAX_VALUE / 2;
  //@ ensures \result <==> test(x);
  public static boolean f(double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> (int) (x + 1) > 0;
  //@ ensures !\result ==> (int) (x + 1) <= 0;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: non-static method test(double) cannot be referenced from a static context
  //@ ensures \result <==> test(x);
                           ^
1 error

class Main {

  //@ requires 0.0 <= x && x <= Integer.MAX_VALUE / 2;
  //@ ensures \result <==> new Main().test(x);
  public static boolean f(double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> (int) (x + 1) > 0;
  //@ ensures !\result ==> (int) (x + 1) <= 0;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: Object allocation is not permitted in specification expressions
  //@ ensures \result <==> new Main().test(x);
                           ^
1 error

class Main {

  //@ requires 0.0 <= x && x <= Integer.MAX_VALUE / 2;
  //@ ensures \result <==> test(x);
  public static boolean f(double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> (int) (x + 1) > 0;
  //@ ensures !\result ==> (int) (x + 1) <= 0;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: non-static method test(double) cannot be referenced from a static context
  //@ ensures \result <==> test(x);
                           ^
1 error

class Main {

  //@ requires 0.0 <= x && x <= Integer.MAX_VALUE / 2;
  //@ ensures \result <==> new Main().test(x);
  public static boolean f(double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> (int) (x + 1) > 0;
  //@ ensures !\result ==> (int) (x + 1) <= 0;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: Object allocation is not permitted in specification expressions
  //@ ensures \result <==> new Main().test(x);
                           ^
1 error

class Main {

  //@ requires 0.0 <= x && x <= Integer.MAX_VALUE / 2;
  //@ ensures \result <==> test(x);
  public static boolean f(double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> (int) (x + 1) > 0;
  //@ ensures !\result ==> (int) (x + 1) <= 0;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: non-static method test(double) cannot be referenced from a static context
  //@ ensures \result <==> test(x);
                           ^
1 error

class Main {

  //@ requires 0.0 <= x && x <= Integer.MAX_VALUE / 2;
  //@ ensures \result <==> new Main().test(x);
  public static boolean f(double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> (int) (x + 1) > 0;
  //@ ensures !\result ==> (int) (x + 1) <= 0;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: Object allocation is not permitted in specification expressions
  //@ ensures \result <==> new Main().test(x);
                           ^
1 error

class Main {

  //@ requires 0.0 <= x && x <= Integer.MAX_VALUE / 2;
  //@ ensures \result <==> test(x);
  public static boolean f(double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> (int) (x + 1) > 0;
  //@ ensures !\result ==> (int) (x + 1) <= 0;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: non-static method test(double) cannot be referenced from a static context
  //@ ensures \result <==> test(x);
                           ^
1 error

class Main {

  //@ requires 0.0 <= x && x <= Integer.MAX_VALUE / 2;
  //@ ensures \result <==> test(x);  
  public static boolean f(double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> (int) (x + 1) > 0;
  //@ ensures !\result ==> (int) (x + 1) <= 0;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}

/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: non-static method test(double) cannot be referenced from a static context
  //@ ensures \result <==> test(x);  
                           ^
1 error

class Main {

  //@ requires 0.0 <= x && x <= Integer.MAX_VALUE / 2;
 
  public static boolean f(double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires 0.0 <= x;
  //@ ensures \result ==> (int) (x + 1) > 0;
  //@ ensures !\result ==> (int) (x + 1) <= 0;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}


